fixed subtitle text overflow

--- a/Styles/lessons/partViewer.css
+++ b/Styles/lessons/partViewer.css
@@ -14,9 +14,10 @@
 }
 
 #part-close-button-hidden {
-    width: 0;
-    height: 0;
+    width: 0px;
+    height: 0px;
     overflow: hidden;
+    transition: all ease 1s;
 }
 
 #part-close-button {
@@ -94,6 +95,7 @@
     border-radius: 15px;
     background-color: rgb(0, 175, 175);
     transition: all ease 0.3s;
+    text-align: center;
 }
 
 .part-viewer-button:hover {
